--- a/Demo/src/main/resources/application.yml
+++ b/Demo/src/main/resources/application.yml
@@ -5,3 +5,5 @@ spring:
     redis:
       host: ${SPRING_REDIS_HOST:localhost}
       port: ${SPRING_REDIS_PORT:6379}
+
+# spring.redis.password ....
